--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,7 @@ include_package_data = True
 packages = find:
 python_requires = >=3.6.0
 install_requires =
-  numpy
+  numpy<1.17
   estraces
 tests_require =
   pytest
