feat: Add MIA distinguisher and analysis APIs.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ lint:
   script:
     - conda install python=3.6
     - pip install -e .
-    - pip install flake8 pep8-naming flake8-docstrings
+    - pip install "pydocstyle<4" flake8 pep8-naming flake8-docstrings
     - flake8 --config=.flake8 scared tests setup.py
 
 test:
