feat: add memory usage estimation check at first distinguisher update

--- a/.recipe/meta.yaml
+++ b/.recipe/meta.yaml
@@ -22,7 +22,7 @@ requirements:
     - python
     - numpy
     - estraces
-
+    - psutil
 about:
   home: https://gitlab.com/eshard/scared
   license: GNU LGPL V3
