--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ stages:
 lint:
   stage: lint
   script:
-    - conda install python=3.6
+    - conda install python=3.6 psutil
     - pip install -e .
     - pip install "pydocstyle<4" flake8 pep8-naming flake8-docstrings
     - flake8 --config=.flake8 scared tests setup.py
@@ -39,7 +39,7 @@ deploy:pypi:
     - tags
   when: manual
   script:
-    - conda install python=3.6
+    - conda install python=3.6 psutil
     - pip install -U pip setuptools wheel twine
     - twine upload --repository-url $PYPI_REPOSITORY dist/*  -u $PYPI_USERNAME -p $PYPI_PWD
 
