maint: prepare 0.4.1a release

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,7 +73,7 @@ deploy:conda:
 pages:
   stage: build
   script:
-    - conda install python=3.6
+    - conda install python=3.6 psutil
     - pip install -e .
     - cd docs
     - ./build_doc.sh
