--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,7 +61,7 @@ deploy:conda:
     - conda install python=3.6 anaconda-client
     - conda config --add channels $ANACONDA_CHANNEL
     - anaconda login --username $ANACONDA_USERNAME --password $ANACONDA_PWD
-    - anaconda upload out/linux-64/scared*.bz2 
+    - anaconda upload out/noarch/scared*.tar.bz2
     - anaconda logout
   only:
     - tags
