--- a/.recipe/meta.yaml
+++ b/.recipe/meta.yaml
@@ -24,6 +24,7 @@ requirements:
     - numpy
     - estraces
     - psutil
+    - numba
 about:
   home: https://gitlab.com/eshard/scared
   license: GNU LGPL V3
