--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ lint:
   stage: lint
   script:
     - apt update && apt install -y gcc
-    - conda install python=3.6 psutil 'numpy<1.17'
+    - conda install python=3.6 psutil numpy cython
     - pip install -e .
     - pip install "pydocstyle<4" flake8 pep8-naming flake8-docstrings
     - flake8 --config=.flake8 scared tests setup.py
@@ -19,7 +19,7 @@ test:
   stage: test
   script:
     - apt update && apt install -y gcc
-    - conda install python=3.6 psutil pycrypto 'numpy<1.17'
+    - conda install python=3.6 psutil pycrypto numpy cython
     - python setup.py test -v
 
 
@@ -27,9 +27,10 @@ build:pypi:
   stage: build
   script:
     - apt update && apt install -y gcc
-    - conda install python=3.6 'numpy<1.17'
-    - pip install -U pip setuptools wheel
-    - python setup.py sdist bdist_wheel
+    - conda install python=3.6 numpy cython numba
+    - pip install -U pip setuptools
+    - python setup.py build_ext --inplace
+    - python setup.py sdist
   only:
     - tags
   artifacts:
@@ -42,8 +43,8 @@ deploy:pypi:
     - tags
   when: manual
   script:
-    - conda install python=3.6 psutil 'numpy<1.17'
-    - pip install -U pip setuptools wheel twine
+    - conda install python=3.6 psutil cython numpy numba
+    - pip install -U pip setuptools twine
     - twine upload --repository-url $PYPI_REPOSITORY dist/*  -u $PYPI_USERNAME -p $PYPI_PWD
 
 build:conda:
@@ -78,7 +79,7 @@ pages:
   stage: build
   script:
     - apt update && apt install -y gcc
-    - conda install python=3.6 psutil 'numpy<1.17'
+    - conda install python=3.6 psutil numpy cython
     - pip install -e .
     - cd docs
     - ./build_doc.sh
