fix: manage cython dep properly

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = scared
 description = scared is a side-channel analysis framework.
 author = eshard
 author_email = scared@eshard.com
-version = 0.8.1
+version = 0.8.2
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://gitlab.com/eshard/scared
@@ -37,6 +37,7 @@ install_requires =
   psutil
   numba
   scipy
+  cython
 tests_require =
   pytest
   pycrypto
