--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,7 @@ project_urls =
   Issues=https://gitlab.com/eshard/scared/issues
 classifiers =
   Programming Language :: Python :: 3.6
+  Programming Language :: Python :: 3.7
   Development Status :: 5 - Production/Stable
   Environment :: Console
   Framework :: Jupyter
@@ -30,7 +31,10 @@ classifiers =
 zip_safe = False
 include_package_data = True
 packages = find:
-python_requires = >=3.6.0
+python_requires = >=3.6.0<3.8
+setup_requires = 
+  numpy
+  cython
 install_requires =
   numpy
   estraces
