maint: prepare 0.8.8 release

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ build:pypi:
   script:
     - apt update && apt install -y gcc
     - pip install -U pip setuptools numpy
-    - python setup.py sdist bdist_wheel
+    - python setup.py sdist
   only:
     - tags
   artifacts:
