--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ test:
     - python setup.py test -v
 
 
-build:pypi:
+build:pypi:src:
   stage: build
   script:
     - apt update && apt install -y gcc
@@ -35,6 +35,19 @@ build:pypi:
     paths:
       - "dist/*"
 
+
+build:pypi:linux_wheels:
+  image:
+    name: "quay.io/pypa/manylinux1_x86_64"
+  stage: build
+  script:
+    - ./build_wheels.sh
+  only:
+    - tags
+  artifacts:
+    paths:
+      - "wheelhouse/*.whl"
+
 deploy:pypi:
   stage: deploy
   only:
@@ -44,6 +57,7 @@ deploy:pypi:
     - conda install python=3.6 psutil cython numpy numba
     - pip install -U pip setuptools twine
     - twine upload --repository-url $PYPI_REPOSITORY dist/*  -u $PYPI_USERNAME -p $PYPI_PWD
+    - twine upload --repository-url $PYPI_REPOSITORY wheelhouse/*  -u $PYPI_USERNAME -p $PYPI_PWD
 
 build:conda:
   stage: build
