Updated conda deployment rule

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,7 +78,7 @@ deploy:conda:
     - conda config --add channels $ANACONDA_CHANNEL
     - conda install anaconda-client
     - anaconda login --username $ANACONDA_USERNAME --password $ANACONDA_PWD
-    - anaconda upload out/noarch/scared*.tar.bz2
+    - anaconda upload out/*/scared*.tar.bz2
     - anaconda logout
   only:
     - tags
