--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,13 +15,32 @@ lint:
     - pip install "pydocstyle<4" flake8 pep8-naming flake8-docstrings
     - flake8 --config=.flake8 scared tests setup.py
 
-test:
+test:python36:
   stage: test
   script:
     - apt update && apt install -y gcc
-    - conda install python=3.6 psutil pycrypto numpy cython
+    - eval "$(conda shell.bash hook)"
+    - conda create -n env-python36 python=3.6 psutil pycrypto numpy cython
+    - conda activate env-python36
     - python setup.py test -v
 
+test:python37:
+  stage: test
+  script:
+    - apt update && apt install -y gcc
+    - eval "$(conda shell.bash hook)"
+    - conda create -n env-python37 python=3.7 psutil pycrypto numpy cython
+    - conda activate env-python37
+    - python setup.py test -v
+
+test:python38:
+  stage: test
+  script:
+    - apt update && apt install -y gcc
+    - eval "$(conda shell.bash hook)"
+    - conda create -n env-python38 python=3.8 psutil pycrypto numpy cython
+    - conda activate env-python38
+    - python setup.py test -v
 
 build:pypi:src:
   stage: build
