--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,7 @@ project_urls =
 classifiers =
   Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
+  Programming Language :: Python :: 3.8
   Development Status :: 5 - Production/Stable
   Environment :: Console
   Framework :: Jupyter
@@ -31,7 +32,7 @@ classifiers =
 zip_safe = False
 include_package_data = True
 packages = find:
-python_requires = >=3.6.0<3.8
+python_requires = >=3.6.0<3.9
 setup_requires =
   numpy
   cython
