--- a/.recipe/meta.yaml
+++ b/.recipe/meta.yaml
@@ -9,18 +9,17 @@ source:
 
 build:
   number: 1
+  noarch: python
 
 requirements:
-  build:
-    - {{ compiler('c') }}
   host:
-    - python {{ python }}
+    - python
     - setuptools>=40.0
     - wheel
     - pip
     - numpy
   run:
-    - python {{python}}
+    - python
     - numpy
     - estraces
     - psutil
