[FIX] add conda update conda to avoid anaconda-client breaking conda by upgrading python version from 3.7 to 3.10
https://stackoverflow.com/questions/64042030/no-module-named-conda-in-docker

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -90,6 +90,7 @@ deploy:conda:
   stage: deploy
   script:
     - conda config --add channels $ANACONDA_CHANNEL
+    - conda update conda
     - conda install anaconda-client
     - anaconda login --username $ANACONDA_USERNAME --password $ANACONDA_PWD
     - anaconda upload out/*/scared*.tar.bz2
