--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,7 +72,7 @@ deploy:pypi:
   script:
     - pip install -U pip setuptools twine
     - twine upload --repository-url $PYPI_REPOSITORY dist/*.tar.gz -u $PYPI_USERNAME -p $PYPI_PWD
-    - twine upload --repository-url $PYPI_REPOSITORY dyst/*.whl -u $PYPI_USERNAME -p $PYPI_PWD
+    - twine upload --repository-url $PYPI_REPOSITORY dist/*.whl -u $PYPI_USERNAME -p $PYPI_PWD
 
 build:conda:
   stage: build
