--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ description = scared is a side-channel analysis framework.
 name = scared
 author = eshard
 author_email = scared@eshard.com
-version = 0.9.1
+version = 0.9.2
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://gitlab.com/eshard/scared
@@ -15,6 +15,7 @@ classifiers =
   Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
+  Programming Language :: Python :: 3.9
   Development Status :: 5 - Production/Stable
   Environment :: Console
   Framework :: Jupyter
@@ -32,7 +33,7 @@ classifiers =
 zip_safe = False
 include_package_data = True
 packages = find:
-python_requires = >=3.6.0<3.9
+python_requires = >=3.6.0<3.10
 install_requires =
   numpy
   estraces
