--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,6 @@ description = scared is a side-channel analysis framework.
 name = scared
 author = eshard
 author_email = scared@eshard.com
-version = 0.9.2
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://gitlab.com/eshard/scared
@@ -52,4 +51,11 @@ test_suite = tests
 [options.packages.find]
 exclude =
     tests
- 
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = scared/_version.py
+versionfile_build = scared/_version.py
+tag_prefix =
+parentdir_prefix = scared-
