--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -83,33 +83,44 @@ deploy:pypi:
     - twine upload --repository-url $PYPI_REPOSITORY dist/*.tar.gz -u $PYPI_USERNAME -p $PYPI_PWD
     - twine upload --repository-url $PYPI_REPOSITORY dist/*.whl -u $PYPI_USERNAME -p $PYPI_PWD
 
+build-dev:conda:
+  stage: build
+  script:
+    - cd .recipe
+    - conda install conda-build conda-verify
+    - conda config --add channels $ANACONDA_CHANNEL
+    - conda build --output-folder out dev
+  artifacts:
+    paths:
+      - ".recipe/out/*/*.tar.bz2"
+
 build:conda:
   stage: build
   script:
+    - cd .recipe
     - conda install conda-build conda-verify
     - conda config --add channels $ANACONDA_CHANNEL
-    - conda build --output-folder out .recipe
+    - conda build --output-folder out prod
   only:
     - tags
   artifacts:
     paths:
-      - "out/*/*.tar.bz2"
+      - ".recipe/out/*/*.tar.bz2"
 
 deploy:conda:
   stage: deploy
   script:
+    - cd .recipe
     - conda config --add channels $ANACONDA_CHANNEL
     - conda update conda
     - conda install anaconda-client
     - anaconda login --username $ANACONDA_USERNAME --password $ANACONDA_PWD
     - anaconda upload out/*/scared*.tar.bz2
     - anaconda logout
-  only:
-    - tags
   when: manual
   artifacts:
     paths:
-      - "out/*/*.tar.bz2"
+      - ".recipe/out/*/*.tar.bz2"
 
 pages:
   stage: build
