--- a/setup.cfg
+++ b/setup.cfg
@@ -34,19 +34,22 @@ include_package_data = True
 packages = find:
 python_requires = >=3.6.0<3.10
 install_requires =
+  numba
   numpy
   estraces
   psutil
-  numba
   scipy
-tests_require =
+test_suite = tests
+
+[options.extras_require]
+test =
   pytest
+  pytest-cov
   pycrypto
   pydocstyle<4
   flake8
   pep8-naming
   flake8-docstrings
-test_suite = tests
 
 [options.packages.find]
 exclude =
