--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ classifiers =
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
+  Programming Language :: Python :: 3.10
   Development Status :: 5 - Production/Stable
   Environment :: Console
   Framework :: Jupyter
@@ -32,10 +33,10 @@ classifiers =
 zip_safe = False
 include_package_data = True
 packages = find:
-python_requires = >=3.6.0<3.10
+python_requires = >=3.6.0<3.11
 install_requires =
   numba
-  numpy
+  numpy >=1.20.3
   estraces
   psutil
   scipy
@@ -45,7 +46,7 @@ test_suite = tests
 test =
   pytest
   pytest-cov
-  pycrypto
+  pycryptodome
   pydocstyle<4
   flake8
   pep8-naming
