--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,7 @@ classifiers =
 zip_safe = False
 include_package_data = True
 packages = find:
-python_requires = >=3.7.0<3.12
+python_requires = >=3.7.0,<3.12
 install_requires =
   numba
   numpy >=1.20.3
