[FIX] use anaconda token

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -117,9 +117,7 @@ deploy:conda:
     - conda config --add channels $ANACONDA_CHANNEL
     - conda update conda
     - conda install anaconda-client
-    - anaconda login --username $ANACONDA_USERNAME --password $ANACONDA_PWD
-    - anaconda upload out/*/scared*.tar.bz2
-    - anaconda logout
+    - anaconda -t $ANACONDA_TOKEN upload out/*/scared*.tar.bz2
   when: manual
   artifacts:
     paths:
