--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ classifiers =
   Programming Language :: Python :: 3.9
   Programming Language :: Python :: 3.10
   Programming Language :: Python :: 3.11
+  Programming Language :: Python :: 3.12
   Development Status :: 5 - Production/Stable
   Environment :: Console
   Framework :: Jupyter
@@ -32,7 +33,7 @@ classifiers =
 zip_safe = False
 include_package_data = True
 packages = find:
-python_requires = >=3.7.0,<3.12
+python_requires = >=3.7.0,<3.13
 install_requires =
   numba
   numpy >=1.20.3
