Resolve "[Synchronizer] Use buffered ETSWriter"

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,7 +37,7 @@ python_requires = >=3.7.0,<3.13
 install_requires =
   numba
   numpy >=1.20.3
-  estraces
+  estraces >=1.9.4
   psutil
   scipy
 test_suite = tests
