--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ stages:
   - build
   - deploy
 
+# -------------------- LINTING --------------------
 lint:
   stage: lint
   script:
@@ -14,118 +15,95 @@ lint:
     - pip install "pydocstyle<4" flake8 pep8-naming flake8-docstrings
     - flake8 --config=.flake8 scared tests setup.py
 
-test:python38:
+# -------------------- TEST JOBS --------------------
+
+.test:python:
   stage: test
   script:
     - apt update && apt install -y gcc
     - eval "$(conda shell.bash hook)"
-    - conda create -n env-python38 python=3.8
-    - conda activate env-python38
+    - conda create -n env-python$PYTHON_VERSION python=$PYTHON_VERSION
+    - conda activate env-python$PYTHON_VERSION
+    - {% if NUMPY_VERSION %}
+      conda install numpy=$NUMPY_VERSION
+      {% endif %}
     - pip install .[test]
     - pytest --color=yes -vv --cov=scared tests
+  variables:
+    PYTHON_VERSION: "3.10"
+    NUMPY_VERSION: ""
 
 test:python39:
-  stage: test
-  script:
-    - apt update && apt install -y gcc
-    - eval "$(conda shell.bash hook)"
-    - conda create -n env-python39 python=3.9
-    - conda activate env-python39
-    - pip install .[test]
-    - pytest --color=yes -vv --cov=scared tests
+  extends: .test:python
+  variables:
+    PYTHON_VERSION: "3.9"
 
 test:python310-intel:
-  stage: test
-  script:
-    - apt update && apt install -y gcc
-    - eval "$(conda shell.bash hook)"
-    - conda config --add channels conda-forge
-    - conda config --add channels https://software.repos.intel.com/python/conda
-    - conda config --set channel_priority strict
-    - conda create -n env-python310 python=3.10
-    - conda activate env-python310
-    - conda install numpy==1.26.4
-    - pip install .[test]
-    - pytest --color=yes -vv --cov=scared tests
+  extends: .test:python
+  variables:
+    PYTHON_VERSION: "3.10"
+    NUMPY_VERSION: "1.26.4"
+
 test:python310:
-  stage: test
-  script:
-    - apt update && apt install -y gcc
-    - eval "$(conda shell.bash hook)"
-    - conda create -n env-python310 python=3.10
-    - conda activate env-python310
-    - pip install .[test]
-    - pytest --color=yes -vv --cov=scared tests
+  extends: .test:python
+  variables:
+    PYTHON_VERSION: "3.10"
 
 test:python311:
-  stage: test
-  script:
-    - apt update && apt install -y gcc
-    - eval "$(conda shell.bash hook)"
-    - conda create -n env-python311 python=3.11
-    - conda activate env-python311
-    - pip install .[test]
-    - pytest --color=yes -vv --cov=scared tests
+  extends: .test:python
+  variables:
+    PYTHON_VERSION: "3.11"
 
 test:python312:
-  stage: test
-  script:
-    - apt update && apt install -y gcc
-    - eval "$(conda shell.bash hook)"
-    - conda create -n env-python312 python=3.12
-    - conda activate env-python312
-    - pip install .[test]
-    - pytest --color=yes -vv --cov=scared tests
+  extends: .test:python
+  variables:
+    PYTHON_VERSION: "3.12"
 
-build:pypi:
+# -------------------- BUILD JOBS --------------------
+
+.build:conda:
   stage: build
   script:
-    - conda install python=3.10
-    - pip install -U pip setuptools wheel
-    - python setup.py sdist bdist_wheel
-  only:
-    - tags
+    - export CONDA_SUBDIR=$ARCHITECTURE
+    - cd .recipe
+    - conda install conda-build conda-verify
+    - conda config --add channels $ANACONDA_CHANNEL
+    - {% if ARCHITECTURE == "linux-aarch64" %}
+      apt update && apt install -y qemu-user-static  # Enable ARM emulation
+      {% endif %}
+    - conda build --output-folder out prod
+    - conda clean --all -y
   artifacts:
     paths:
-      - "dist/*"
-
-
-deploy:pypi:
-  stage: deploy
+      - ".recipe/out/*/*.tar.bz2"
+  variables:
+    ARCHITECTURE: "linux-64"
   only:
     - tags
-  when: manual
+
+build:conda:x86_64:
+  extends: .build:conda
+  variables:
+    ARCHITECTURE: "linux-64"
+
+build:conda:arm64:
+  extends: .build:conda
+  variables:
+    ARCHITECTURE: "linux-aarch64"
+
+# -------------------- DEPLOY JOBS --------------------
+
+.deploy:pypi:
+  stage: deploy
   script:
     - pip install -U pip setuptools twine
     - twine upload --repository-url $PYPI_REPOSITORY dist/*.tar.gz -u $PYPI_USERNAME -p $PYPI_PWD
     - twine upload --repository-url $PYPI_REPOSITORY dist/*.whl -u $PYPI_USERNAME -p $PYPI_PWD
-
-build-dev:conda:
-  stage: build
-  script:
-    - cd .recipe
-    - conda install conda-build conda-verify
-    - conda config --add channels $ANACONDA_CHANNEL
-    - conda config --add channels https://software.repos.intel.com/python/conda
-    - conda build --output-folder out dev
-  artifacts:
-    paths:
-      - ".recipe/out/*/*.tar.bz2"
-
-build:conda:
-  stage: build
-  script:
-    - cd .recipe
-    - conda install conda-build conda-verify
-    - conda config --add channels $ANACONDA_CHANNEL
-    - conda build --output-folder out prod
   only:
     - tags
-  artifacts:
-    paths:
-      - ".recipe/out/*/*.tar.bz2"
+  when: manual
 
-deploy:conda:
+.deploy:conda:
   stage: deploy
   script:
     - cd .recipe
@@ -133,21 +111,25 @@ deploy:conda:
     - conda update conda
     - conda install anaconda-client
     - anaconda -t $ANACONDA_TOKEN upload out/*/scared*.tar.bz2
+  only:
+    - tags
   when: manual
   artifacts:
     paths:
       - ".recipe/out/*/*.tar.bz2"
 
+# -------------------- DOCUMENTATION --------------------
+
 pages:
   stage: build
   script:
-    - conda install python=3.8 psutil
+    - conda install python=3.9 psutil
     - conda install -c conda-forge myst-parser
     - pip install -e .
     - cd docs
     - ./build_doc.sh
   artifacts:
     paths:
-    - public
+      - public
   only:
     - tags
