--- a/.recipe/prod/meta.yaml
+++ b/.recipe/prod/meta.yaml
@@ -13,7 +13,8 @@ requirements:
     - setuptools>=40.0
     - wheel
     - pip
-    - numpy>=1.20.3
+    - psutil
+    - numpy {{ numpy_version }} 
   run:
     - python
     {% for dep in data['install_requires'] %}
