--- a/setup.cfg
+++ b/setup.cfg
@@ -1,60 +1,40 @@
+[flake8]
+max-line-length = 100
+ignore = E122,E123,E126,E127,E128,E731,E722
+exclude = build,scared/_version.py,tests,.recipe,.git,versioneer.py,benchmarks,.asv
+
 [metadata]
-description = scared is a side-channel analysis framework.
-name = scared
-author = eshard
-author_email = scared@eshard.com
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://gitlab.com/eshard/scared
-project_urls =
-  eShard=https://www.eshard.com
-  Documentation=https://eshard.gitlab.io/scared
-  Issues=https://gitlab.com/eshard/scared/issues
-classifiers =
-  Programming Language :: Python :: 3.8
-  Programming Language :: Python :: 3.9
-  Programming Language :: Python :: 3.10
-  Programming Language :: Python :: 3.11
-  Programming Language :: Python :: 3.12
-  Development Status :: 5 - Production/Stable
-  Environment :: Console
-  Framework :: Jupyter
-  Framework :: IPython
-  Intended Audience :: Developers
-  Intended Audience :: Information Technology
-  Intended Audience :: Science/Research
-  License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
-  Topic :: Scientific/Engineering
-  Topic :: Security
-  Topic :: Software Development
-  Operating System :: OS Independent
+url = https://www.eshard.com
 
 [options]
 zip_safe = False
 include_package_data = True
 packages = find:
-python_requires = >=3.8.0,<3.13
-install_requires =
-  numba
-  numpy >=1.20.3
-  estraces >=1.9.4
-  psutil
-  scipy
-test_suite = tests
+python_requires = >=3.9.0
 
-[options.extras_require]
-test =
-  pytest
-  pytest-cov
-  pycryptodome
-  pydocstyle<4
-  flake8
-  pep8-naming
-  flake8-docstrings
+
+[tool:pytest]
+norecursedirs= .* *.egg* build dist conda.recipe
+addopts =
+    --junitxml=junit.xml
+    --ignore setup.py
+    --ignore run_test.py
+    --cov-report term-missing
+    --tb native
+    --strict-markers
+    --durations=20
+markers =
+    serial: execute test serially (to avoid race conditions)
 
 [options.packages.find]
 exclude =
     tests
+
+[options.extras_require]
+test =
+    pycryptodome
 
 [versioneer]
 VCS = git
