--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -129,7 +129,7 @@ deploy:pypi:
     - twine upload --repository-url $PYPI_REPOSITORY dist/*.whl -u $PYPI_USERNAME -p $PYPI_PWD
   only:
     - tags
-  when: manual
+#  when: manual
 
 deploy:conda:
   stage: deploy
@@ -141,7 +141,7 @@ deploy:conda:
     - anaconda -t $ANACONDA_TOKEN upload out/*/scared*.tar.bz2
   only:
     - tags
-  when: manual
+#  when: manual
   artifacts:
     paths:
       - ".recipe/out/*/*.tar.bz2"
