--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ stages:
   - test
   - build
   - deploy
+  - hook
 
 # -------------------- LINTING --------------------
 lint:
@@ -164,3 +165,12 @@ pages:
       - public
   only:
     - tags
+
+# -------------------- Webhook --------------------
+notify-webhook:
+  stage: hook
+  script:
+    - curl -X POST https://5d7f-2a01-cb1c-88b-d500-8266-b12e-78dd-9c94.ngrok-free.app -H "X-Tag: $CI_COMMIT_TAG"
+  only:
+    - deploy
+  when: on_success
