[FIX] no more conda-verify

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,7 +67,7 @@ test:python311:
   script:
     - export CONDA_SUBDIR=$ARCHITECTURE
     - cd .recipe
-    - conda install conda-build conda-verify psutil
+    - conda install conda-build psutil
     # - pip3 install --upgrade psutil
     - conda config --add channels $ANACONDA_CHANNEL
     # - if [[ "$ARCHITECTURE" == "linux-aarch64" ]]; then apt update && apt install -y qemu-user-static; fi  # Enable ARM emulation
