--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ test = [
     "pytest",
     "pytest-cov",
     "pytest-mock",
+    "scalib",
 ]
 
 [project.urls]
@@ -67,6 +68,7 @@ addopts = [
 ]
 markers = [
     "serial: execute test serially (to avoid race conditions)",
+    "end_to_end: mark test as end-to-end test",
 ]
 
 [tool.flake8]
